# ndarray

./: .gitmodules  CMakeLists.txt  README.md  array.hpp  main.cpp
benchmark/: CMakeLists.txt  benchmark.cpp
benchmark/src/: benchmark.cpp
example/: CMakeLists.txt  main.cpp
include/: array.hpp
tests/: CMakeLists.txt
tests/src/: CMakeLists.txt  basic_tests.cpp  calculation_tests.cpp  main.cpp  matrix_op_tests.cpp  test_cases.cpp
